fix: add spacing below filters on tournament edit pages

--- a/src/app/modules/tournament-management/components/tournament-view/tournament-my-published/tournament-my-published.component.scss
+++ b/src/app/modules/tournament-management/components/tournament-view/tournament-my-published/tournament-my-published.component.scss
@@ -6,6 +6,8 @@
 	display: flex;
 	height: 60px;
 
+	margin-bottom: 8px;
+
 	.filter {
 		display: flex;
 		flex: 1;
